@@ -291,16 +291,16 @@
                </execution>
             </executions>
          </plugin>
-         <plugin>
+         <!--plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
             <configuration>
                <compilerArgs>
-                  <arg>--add-exports=java.rmi/sun.rmi.server=ALL-UNNAMED</arg>
-                  <arg>--add-exports=java.rmi/sun.rmi.transport=ALL-UNNAMED</arg>
+                  <arg>- -add-exports=java.rmi/sun.rmi.server=ALL-UNNAMED</arg>
+                  <arg>- -add-exports=java.rmi/sun.rmi.transport=ALL-UNNAMED</arg>
                </compilerArgs>
             </configuration>
-         </plugin>
+         </plugin-->
          <plugin>
             <groupId>org.apache.activemq</groupId>
             <artifactId>artemis-maven-plugin</artifactId>
